home page broken alignment fix
categories in home page

--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -144,150 +144,78 @@ a.link_grey:hover {
 
 .middle-part{           /*text layout*/
 
-    padding-top: 1rem !important;
-    padding-bottom: 1rem !important; 
-    padding-right: 50px; 
-    padding-left: 5px;
-    position: relative;
-    align: center;
-    display: table-cell;
     vertical-align: middle;
+    align: left;
+    display: table-cell;
+
+    .category-heading{
+
+        font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+        color: #666666;
+        letter-spacing: 1px;
+        line-height: 1.5;
+      
+            @media (max-width: 1199px){
+                                        font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                        
+                                     }
+
+
+            @media (max-width: 991px){
+                                        font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                        
+                                     }
+
+            @media (max-width: 768px){
+                                        font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                       
+                                     }
+
+            @media (max-width: 491px){
+
+                                        font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                        
+                                     }
+
+    }
+
+    .description-part{
+
+        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+        color: #bbbbbb;
+        
+        
+            @media (max-width: 1199px){
+                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                        
+                                      }
+
+            @media (max-width: 991px){
+                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                       
+                                        
+                                     }
+
+            @media (max-width: 768px){
+                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                      
+                                     }
+
+            @media (max-width: 491px){
+                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                        display: none;
+                                     }
+
+    }
 
 }
 
 .right-part{            /*caret layout*/
 
     display: table-cell;
-    position: absolute; 
-    top: 18px;
-    right: 10px;
     color: #f1f2f2;
     font-size: 3rem;
-
-}
-
-.description-part{
-
-    font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-    color: #bbbbbb;
-    padding-top: 10px;
-    
-    @media (max-width: 1199px){font: 200 11px/1.2em "pt-sans-regular",sans-serif;}
-
-    @media (max-width: 991px){
-                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-                                display: none;
-                             }
-
-    @media (max-width: 768px){
-                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-                                display: table-cell;
-                                top: 50px;
-                                left: 100px;
-                             }
-
-    @media (max-width: 491px){
-                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-                                display: none;
-                             }
-
-}
-
-
-.category-heading{
-
-    font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #666666;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-   
-    display: table-cell;
-
-    position: absolute;
-
-    top: 8px;
-    left: -188px;
-
-
-   @media (max-width: 1199px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -140px;
-                                top: 10px;
-                             }
-
-
-    @media (max-width: 991px){
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -90px;
-                                top: 25px;
-                             }
-
-    @media (max-width: 768px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -100px;
-                                top: 2px;
-                             }
-
-    @media (max-width: 491px){
-
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                top: 15px;
-                                left: -75px;
-                             }
-
-}
-
-.right-part{            /*caret layout*/
-
-    display: block;
-    position: absolute;
-    top: 18px;
-    right: 10px;
-    color: #f1f2f2;
-    font-size: 3rem;
-
-}
-
-.description-part{
-
-    display: table-cell;
-    position: absolute;
-    top: 64px;
-    left: 102px;
-    font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-    color: #bbbbbb;
-
-                @media (max-width: 1199px){
-                                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-
-
-                                          }
-
-
-                @media (max-width: 991px){
-                                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-                                                display: none;
-
-
-                             }
-
-                @media (max-width: 768px){
-                                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-                                                display: table-cell;
-                                                top: 50px;
-                                                left: 100px;
-
-                             }
-
-                @media (max-width: 491px){
-
-                                                font: 200 11px/1.2em "pt-sans-regular",sans-serif;
-                                                display: none;
-
-                             }
-
-
+    padding-top: 5px;
 }
 
 
